...
    <string name="ed_ai_choose">Choose</string>
    <string name="ed_ai_save_settings">Save settings</string>
    <string name="ed_ai_saved">Saved</string>
    <string name="ed_ai_testing_connection">Testing connection…</string>
    <string name="ed_ai_test_connection">Test connection</string>
...
    <string name="ed_ai_no_results">No results left</string>
    <string name="ed_ai_swiped_items_excluded">The swiped-away items will not be added.</string>
    <string name="ed_ai_cancel">Cancel</string>
    <string name="ed_ai_untitled_task">Untitled task</string>
    <string name="ed_ai_untitled_event">Untitled event</string>
...
        <item quantity="other">%1$d entries since %2$s</item>
    </plurals>
    <string name="ed_journal_search">Search journal</string>
    <string name="ed_journal_month_empty">%1$s, no entries</string>
    <plurals name="ed_journal_month_entries">
...
    <string name="ed_journal_edit_entry">Edit entry</string>
    <string name="ed_journal_cancel">Cancel</string>
    <string name="ed_journal_cancel_editing">Cancel journal editing</string>
    <string name="ed_journal_close_entry">Close journal entry</string>
    <string name="ed_journal_save">Save</string>
...
    <string name="ed_journal_discard_changes">Discard journal changes</string>
    <string name="ed_journal_discard">Discard</string>
    <string name="ed_journal_title_semantics">Journal title</string>
    <string name="ed_journal_add_title">Add note title</string>
    <plurals name="ed_journal_words">
...
    <string name="ed_editor_cancel">Cancel</string>
    <string name="ed_editor_save">Save</string>
    <string name="ed_editor_save_description">Save editor</string>
    <string name="ed_editor_cancel_description">Cancel editor</string>
    <string name="ed_editor_edit_event">Edit event</string>
    <string name="ed_editor_add_on_date">Add on %1$s</string>
...
    <string name="ed_editor_new_entry">New entry</string>
    <string name="ed_editor_import_event_photo">Import event from photo</string>
    <string name="ed_editor_close">Close editor</string>
    <string name="ed_editor_kind_event">Event</string>
    <string name="ed_editor_kind_task">Task</string>
...
    <string name="ed_add_event">Add event</string>
    <string name="ed_cancel">Cancel</string>
    <string name="ed_close_event_preview">Close event preview</string>
    <string name="ed_delete">Delete</string>
    <string name="ed_delete_event">Delete event</string>
    <string name="ed_open">Open</string>
    <string name="ed_open_event">Open event</string>
    <string name="ed_save">Save</string>
    <string name="ed_save_event_changes">Save event changes</string>
    <string name="ed_event_starts">Starts</string>
    <string name="ed_event_ends">Ends</string>
    <string name="ed_event_title_label">Event title</string>
    <string name="ed_location">Location</string>
    <string name="ed_change_reminder">Change reminder</string>
...
    <string name="ed_remove_recurring_event">Remove this repeating event?</string>
    <string name="ed_remove_recurring_task">Remove this repeating task?</string>
    <string name="ed_remove_event">Remove this event?</string>
    <string name="ed_close_event_details">Close event details</string>
    <string name="ed_edit">Edit</string>
...
    <string name="ed_new_task">New task</string>
    <string name="ed_cancel_task_editing">Cancel task editing</string>
    <string name="ed_delete_task">Delete task</string>
    <string name="ed_save_task">Save task</string>
    <string name="ed_mark_open">Mark as open</string>
...
    <string name="ed_task_edit_named">Edit %1$s</string>
    <string name="ed_task_subtasks_count">Subtasks · %1$d of %2$d</string>
    <string name="ed_editor_title_event">Title, event</string>
    <string name="ed_editor_title_task">Title, task</string>
    <string name="ed_editor_title_journal">Title, journal</string>
    <string name="ed_day_close">Close day view</string>
...
