...
    <string name="cal_repeats_weekly">Repeats weekly</string>
    <string name="cal_day_sidebar">Day sidebar</string>
    <string name="cal_day_sidebar_page">Day sidebar page %1$s</string>
    <string name="cal_add_on_date">Add on %1$s</string>
    <string name="cal_plus_add">+ Add</string>
    <string name="cal_open_location_maps">Open location in maps</string>
    <string name="cal_open_event_location_maps">Open event location in maps</string>
    <string name="cal_image">Image</string>
    <string name="cal_nothing_to_preview">Nothing to preview yet.</string>
    <string name="cal_markdown">Markdown</string>
    <string name="cal_add_more_detail">Add more detail</string>
    <string name="cal_mode">%1$s mode</string>
    <string name="cal_write">Write</string>
...
    <string name="cal_color_amber">Amber</string>
    <string name="cal_color_plum">Plum</string>
    <string name="cal_color">Color</string>
    <string name="cal_select_color">Select %1$s color</string>
    <string name="cal_task_progress">Task progress, %1$d percent</string>
    <string name="cal_dismiss_surface">Dismiss surface</string>
    <string name="cal_dismiss_detail_card">Dismiss detail card</string>
    <string name="cal_time">Time</string>
    <string name="cal_choosing_month">Choosing month</string>
    <string name="cal_showing_days">Showing days</string>
    <string name="cal_cancel">Cancel</string>
    <string name="cal_done">Done</string>
    <string name="cal_hour">Hour</string>
...
